# op

./: .replit  app.py  engine.py  models.py  pyproject.toml  replit.md  replit_auth.py  routes.py
.github/workflows/: apisec-scan.yml
attached_assets/: Pasted--Cannot-use-checkpoints-in-Desktop-directory-0-7109-pyt_1766748644134.txt  Pasted--OperatorTheta-RuleCore-PayToSolve-Engine-VOLLST-176672_1766727301097.txt  Pasted--PUZ19-ThetaOperator-Meta-Motor-Echter-ausf-hrender-Eng_1766727925528.txt  Pasted--Windows-PowerShell-venv-Scripts-Activate-ps1-oder-Eing_1766748270056.txt  Pasted--motor-v2-py-Meta-Motor-mit-Payment-Provider-und-strikt_1766728201152.txt  Pasted--python-OperatorTheta-RuleCore-Engine-Vollst-ndiges-Pyt_1766727328558.txt  Pasted--system-offer-SystemOffer-system-product-SystemProduct-_1766729106947.txt  Pasted--usr-bin-env-python3-Engine-Kernel-Theta-Autonomous-pro_1766744446058.txt  Pasted--usr-bin-env-python3-self-heal-py-Autonomes-Reparatur-W_1766744461205.txt  Pasted--usr-bin-env-python3-setup-assistant-py-Sicheres-intera_1766744473322.txt  Pasted-Du-bist-im-Kern-schon-da-wo-du-hinwillst-Dein-Motor-ist_1766727706710.txt  copilot-debug_1766749165361.bat
templates/: dashboard.html  landing.html
